[tool.poetry]
name = "sp_ask_running_total_daily_report"
version = "0.1.6"
description = "An helper that create and Excel document representing the number of chats per day"
authors = ["Guinsly Mondesir <guinslym@gmail.com>"]
readme = "README.md"
keywords = ["Ask", "Scholars Portal", "Clavardez", "OCUL", "Chats", "LibraryH3lp"]
homepage = "https://github.com/guinslym/sp_ask_running_total_daily_report"
repository = "https://github.com/guinslym/sp_ask_running_total_daily_report"
license = "MIT"

classifiers = [
"Intended Audience :: Developers",
"Development Status :: 3 - Alpha",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
"Topic :: Software Development :: Libraries",
'Programming Language :: Python',
'Programming Language :: Python :: 3.7',
"Programming Language :: Python :: 3 :: Only",
'Programming Language :: Python :: Implementation :: CPython',
'Programming Language :: Python :: Implementation :: PyPy'
]

[flake8]
application_import_names = uploader
import-order-style = google
exclude =
    __pycache__/
    .venv/
    .git/
    dist/
ignore =
    # E231  # missing whitespace after ‘,’, ‘;’, or ‘:’
    C812  # missing trailing comma
    E203  # Whitespace before ':'
    E266  # Too many leading '#' for block comment
    E501  # line too long (> 79 characters)
    E712  # comparison to true / false should be ...
    N805  # first argument of method should be named 'self' -> pydantic validators
    W503  # line break before binary operator
    B008  # Form(...) from FastAPI
max-complexity = 18
max-line-length = 88

[tool.poetry.dependencies]
python = "^3.7"
pdbpp = "^0.10.2"
lh3api = "^0.2.0"
ask_academic_dates = "^0.2.3"
pandas = "^0.25.3"
ask_schools = "^0.2.4"
xlrd = "^1.2"
XlsxWriter = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
